--- a/GAN.ipynb
+++ b/GAN.ipynb
@@ -28,6 +28,45 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "hI6euJM4Lbfm",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 119
+        },
+        "outputId": "f6c9e6f8-f20a-4591-a488-3f56f0d22181"
+      },
+      "source": [
+        "# Install TensorFlow\n",
+        "# !pip install -q tensorflow-gpu==2.0.0-rc0\n",
+        "\n",
+        "try:\n",
+        "  %tensorflow_version 2.x  # Colab only.\n",
+        "except Exception:\n",
+        "  pass\n",
+        "\n",
+        "import tensorflow as tf\n",
+        "print(tf.__version__)"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "`%tensorflow_version` only switches the major version: `1.x` or `2.x`.\n",
+            "You set: `2.x  # Colab only.`. This will be interpreted as: `2.x`.\n",
+            "\n",
+            "\n",
+            "TensorFlow is already loaded. Please restart the runtime to change versions.\n",
+            "2.0.0-rc0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "MmDF5zFxBhTF",
         "colab_type": "code",
         "colab": {}
